Socket.io working within project hierarchy, using CAAT to draw canvas area

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 10.0.3 for binding GitHub repository
+Using node.js with socket.io to create a realtime multiplayer game in HTML5
